# fastapi-gracefulshutdown-websockets

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  settings.py  test.db
api/: api.py
api/v1/endpoints/: api_task_crud.py
deployments/: deployment.yaml  service.yaml
handlers/: signal_handler.py
models/api/: models.py
models/db/: models.py
services/: WebSocketConnectionsManager.py  kubernetes_services.py
services/db_ops/: flag_ops.py  task_ops.py
tasks/: bg_tasks.py
