[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Jainal Gosaliya <jainal09gosalia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.28"
uvicorn = {extras = ["standard"], version = "^0.28.0"}


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
autoflake = "^2.3.1"
black = "^24.3.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
